--- a/css/index.css
+++ b/css/index.css
@@ -101,11 +101,14 @@ html, body {
 	background-color: transparent !important;
 	border-color: white;
 	font-weight: 600;
+	border-width: 2px;
+	font-weight: 600;
 }
 
 .btn-white:hover {
 	background-color: rgba(255, 0, 0, 0.8) !important;
 	color: #fff;
+	border-color: transparent !important;
 	transition: ease-in 0.4s;
 }
 
