--- a/css/index.css
+++ b/css/index.css
@@ -113,11 +113,12 @@ html, body {
 }
 
 .btn-nav {
-	font-size: 13px;
+	font-size: 14px !important;
 	padding: 10px 5px !important;
 	margin-top: 2%;
 	margin-right: 5px;
 	font-weight: 600;
+	font-size: 16px;
 }
 
 .btn-nav:hover {
@@ -161,18 +162,21 @@ html, body {
 	width: 300px;
 	margin-bottom: 25px;
 	color: rgba(0,0,0, 0.5);
+	font-weight: 600;
 }
 
 .c-text {
 	font-size: 16px;
 	width: 420px;
 	margin-bottom: 22px;
+	font-weight: 600;
 }
 
 .c-text-small {
 	font-size: 12px;
 	width: 400px;
 	color: grey;
+	font-weight: 600;
 }
 
 .content-box-2 {
